Openvpn: disabled compression due to security issues

--- a/openvpn/files/etc/openvpn/openvpn_server.conf.j2
+++ b/openvpn/files/etc/openvpn/openvpn_server.conf.j2
@@ -18,7 +18,7 @@ client-to-client
 keepalive 10 120
 tls-auth {{ openvpn_root }}/ta.key 0
 cipher AES-256-CBC
-compress lz4
+;compress lz4
 ;max-clients 100
 user openvpn
 group openvpn
